# spinbench

./: CMakeLists.txt  Info-gnustep.plist.in  SB2DPRGradient.h  SB2DPRGradient.m  SBCathTrackGradient copy-Info.plist  SBCathTrackGradient.h  SBCathTrackGradient.m  cpSBPlugin
English.lproj/: InfoPlist.strings
InspectorPane.nib/: designable.nib  keyedobjects.nib
SB2DPRGradient/: CMakeLists.txt  SB2DPRGradient copy-Info.plist  SB2DPRGradient.h  SB2DPRGradient.m
SB2DPRGradient.xcodeproj/: project.pbxproj
SB3DPRReadout/: CMakeLists.txt  Info.plist  SB3DPRReadout.h  SB3DPRReadout.m
SBCartesianReadout/: CMakeLists.txt  Info.plist  SBCartesianReadout.h  SBCartesianReadout.m
SBCartesianReadout.xcodeproj/: project.pbxproj
SBCathTrackGradient/: CMakeLists.txt  SBCathTrackGradient.h  SBCathTrackGradient.m
SBCathTrackGradient.xcodeproj/: project.pbxproj
SBCathTrackGradient/InspectorPane.nib/: designable.nib  keyedobjects.nib
SBCathTrackGradient/SBCathTrackGradient.xcodeproj/: project.pbxproj
SBCathTrackGradient/SBCathTrackGradient.xcodeproj/xcuserdata/peng.xcuserdatad/xcschemes/: SBCathTrackGradient.xcscheme  xcschememanagement.plist
SBCathTrackGradient/include/: SBAnchoredToList.h  SBFunctions.h  SBOutputPlugin.h  SBOutputPluginContainer.h  SBParamsObject.h  SBPropertyListPlugin.h  SBSequencePlugin.h  vds.h
include/: SBAnchorController.h  SBAnchoredToList.h  SBAnimationView.h  SBColorController.h  SBFunctions.h  SBGenericPlotView.h  SBGraphView.h  SBHardwareInstruction.h  SBKSpaceData.h  SBKey.h  SBOptimizedGradient.h  SBParamsObject.h  SBPropertyListPlugin.h  SBPulseData.h  SBPulsePlugin.h  SBPulseTag.h  SBRFTag.h  SBReadoutTag.h  SBRotation.h  SBSWDFileManager.h  SBSegmentMetadata.h  SBSequencePlugin.h  SBTag.h  SBTrapezoid.h  SBVariableAxis.h  SBVariablePlugin.h  SBWaveform.h  SBWaveformParams.h  SBWaveformSegment.h  vds.h  (+1 more)
(+36 files in other folders)
